# clan-soon

./: README.md
clan-program/: Anchor.toml
clan-program/programs/clan-program/: Cargo.toml
clan-program/programs/clan-program/src/: constants.rs  error.rs  lib.rs
clan-program/programs/clan-program/src/instructions/: mod.rs
clan-program/programs/clan-program/src/instructions/clan/: create_clan.rs  events.rs  mod.rs  set_leader.rs
clan-program/programs/clan-program/src/instructions/member/: deposit_to_clan.rs  join_clan.rs  leave_clan.rs  mod.rs  vote.rs
clan-program/programs/clan-program/src/instructions/proposal/: claim_vault.rs  create_proposal.rs  events.rs  execute.rs  mod.rs  update_amount.rs  update_vault.rs
clan-program/programs/clan-program/src/state/: ballot.rs  clan.rs  member.rs  mod.rs  proposal.rs
clan-program/tests/: clan-program.ts
landing-page/: package.json
